--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,10 @@
   font-family: "Avenir LT Std Roman";
   src: url("../fonts/AvenirLTStd-Roman.ttf");
 }
+@font-face {
+  font-family: "Avenir LT Std Book";
+  src: url("../fonts/AvenirLTStd-Book.ttf");
+}
 
 * {
   margin: 0px;
@@ -21,7 +25,7 @@
   background-color: #222222;
   width: 319px;
   padding: 40px 30px;
-  padding-bottom: 80px;
+  padding-bottom: 90px;
   float: left;
   flex-wrap: wrap;
 }
@@ -34,7 +38,7 @@
 .logo {
   display: flex;
   justify-content: space-between;
-  margin-bottom: 53px;
+  margin-bottom: 70px;
   align-items: center;
 }
 .logo h1 {
@@ -57,7 +61,7 @@
   color: #ffffff;
   text-decoration: none;
   font-size: 15px;
-  padding: 16px 30px;
+  padding: 18px 30px;
   display: flex;
   align-items: center;
   width: 100%;
@@ -74,7 +78,7 @@
   margin-right: 21px;
 }
 .follower ul li {
-  margin-bottom: 10px;
+  margin-bottom: 12px;
 }
 .follower ul li a {
   color: #ffffff;
@@ -88,12 +92,12 @@
 .follower span {
   color: #ffffff;
   font-size: 12px;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
   display: block;
   font-family: "Avenir LT Std Roman";
 }
 .follower {
-  margin-top: 60px;
+  margin-top: 65px;
   margin-left: 30px;
 }
 .follower button {
@@ -190,7 +194,7 @@ header {
 }
 .category_section {
   max-width: 1231px;
-  margin: 40px auto;
+  margin: 20px auto;
 }
 .category_section {
   display: flex;
@@ -202,16 +206,19 @@ header {
   font-size: 16px;
   margin: 0px 8px;
   padding: 18px 17px;
+  font-family: "Avenir LT Std Book";
 }
 .filter img {
   width: 24px;
   height: 24px;
-  margin-right: 30px;
 }
 .filter span {
   font-size: 16px;
+  vertical-align: super;
+  padding-left: 14px;
 }
 .filter button {
+  cursor: pointer;
   background-color: #ffffff;
   border-radius: 12px;
   border: 1px solid #d8d8d8;
@@ -221,4 +228,126 @@ header {
 .list span:hover {
   background-color: #f2f2f2;
   border-radius: 12px;
+}
+.section_imgs img {
+  height: 210px;
+  object-fit: cover;
+}
+.section_imgs {
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  margin: 0px auto;
+  max-width: 1231px;
+  position: relative;
+  row-gap: 20px;
+  column-gap: 20px;
+}
+.grid_img span {
+  max-height: 49px;
+  overflow: hidden;
+  display: block;
+  width: 289px;
+  margin-top: 8px;
+  font-family: "Avenir LT Std Medium";
+}
+.imgs_icon img {
+  width: 34px;
+  height: 34px;
+  margin: 3px 0px;
+}
+.imgs_icon {
+  display: none;
+  position: absolute;
+  top: 15px;
+  left: 15px;
+}
+.twoicon {
+  display: flex;
+  background-color: #ffffff;
+  border-radius: 12px;
+  padding: 5px;
+}
+.moreinfobt button {
+  display: block;
+  width: 289px;
+  height: 56px;
+  border-radius: 12px;
+  border: 0;
+  font-size: 16px;
+  color: #222222;
+  margin: 0 auto;
+  margin-top: 38px;
+}
+.picturesection {
+  position: relative;
+}
+
+.picturesection:hover .imgs_icon {
+  display: block;
+}
+.follower_section {
+  background-color: #fafafa;
+  margin-top: 35px;
+  width: 100%;
+  padding: 60px 0px;
+  margin-bottom: 35px;
+}
+.follower_title {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  max-width: 1231px;
+}
+.followers {
+  max-width: 1231px;
+  margin: 0 auto;
+}
+.follower_title h1 {
+  font-size: 32px;
+  color: #222222;
+  font-family: "Avenir LT Std Roman";
+}
+.follower_title span a {
+  font-size: 14px;
+  text-decoration: none;
+  color: #222222;
+  font-family: "Avenir LT Std Roman";
+}
+.section_users {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 27px;
+}
+.designer img {
+  width: 132px;
+  height: 132px;
+  border-radius: 100%;
+}
+.designer h3 {
+  font-size: 16px;
+  color: #222222;
+  font-family: "Avenir LT Std Medium";
+  margin: 0 auto;
+  margin-top: 8px;
+  max-width: 70px;
+}
+.designer span {
+  color: #222222;
+  font-size: 12px;
+  opacity: 0.6;
+  font-family: "Avenir LT Std Book";
+  margin-top: 5px;
+  display: block;
+  text-align: center;
+}
+.designer button {
+  font-size: 14px;
+  background-color: #f2f2f2;
+  color: #222222;
+  outline: none;
+  border: 0;
+  border-radius: 12px;
+  padding: 12px 30px;
+  display: block;
+  margin-top: 15px;
 }
