--- a/css/style.css
+++ b/css/style.css
@@ -110,6 +110,7 @@
 header {
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
   padding: 30px 0px;
   padding-right: 90px;
   padding-left: 25px;
@@ -188,14 +189,15 @@ header {
   background-color: #ff2288;
   margin-left: 30px;
 }
-.category_section {
-  max-width: 1231px;
-  margin: 20px auto;
-}
+
 .category_section {
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
   align-items: center;
+  padding: 0 15px;
+  max-width: 1245px;
+  margin: 20px auto;
 }
 .list span {
   color: #222222;
@@ -231,12 +233,13 @@ header {
 }
 .section_imgs {
   display: grid;
-  grid-template-columns: auto auto auto auto;
+  grid-template-columns: repeat(auto-fit, 285px);
   margin: 0px auto;
   max-width: 1231px;
   position: relative;
   row-gap: 20px;
   column-gap: 20px;
+  padding: 0 15px;
 }
 .grid_img span {
   max-height: 49px;
@@ -291,6 +294,7 @@ header {
 .follower_title {
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
   align-items: center;
   max-width: 1231px;
 }
@@ -312,6 +316,7 @@ header {
 .section_users {
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
   margin-top: 27px;
   margin-right: 50px;
 }
@@ -360,11 +365,15 @@ header {
   border: 0;
   background-color: #d8d8d8;
 }
+.footer_lists {
+  max-width: 1231px;
+  margin: 0 auto;
+}
 .footer_container {
   display: flex;
-  max-width: 920px;
-  margin: 0 auto;
-  margin-top: 50px;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  max-width: 1060px;
   padding-bottom: 100px;
 }
 .footer_container a {
@@ -374,18 +383,6 @@ header {
   text-decoration: none;
   font-family: "Avenir LT Std Book";
 }
-.fordesigners_list {
-  width: 45%;
-}
-.hiredesigners_list {
-  width: 45%;
-}
-.company_list {
-  width: 45%;
-}
-.direct_list {
-  width: 45%;
-}
 .footer_title {
   color: black;
   display: flex;
@@ -393,14 +390,67 @@ header {
   font-family: "Avenir LT Std Medium";
 }
 .lastfooter {
-  max-width: 920px;
+  max-width: 1231px;
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
   align-items: center;
   margin: 0 auto;
   padding-bottom: 20px;
 }
 .footer_icon img {
+  margin-right: 10px;
   width: 24px;
   height: 24px;
+}
+.footer_text span {
+  font-family: "Avenir LT Std Book";
+  font-size: 16px;
+}
+.smartacdmy {
+  font-weight: bold;
+}
+/*this is second page */
+.user_icon img {
+  width: 24px;
+  height: 24px;
+}
+.user_icon {
+  background-color: #3e1d1d00;
+  border: 1px solid #e7e7e7;
+  border-radius: 50px;
+  padding: 6px 8px;
+}
+.section_info {
+  max-width: 1231px;
+  margin: 0 auto;
+  margin-top: 35px;
+}
+.section_info table {
+  text-align: left;
+  width: 100%;
+  border-collapse: collapse;
+}
+.section_info table th {
+  font-size: 18px;
+  color: #111111;
+  font-family: "Avenir LT Std Roman";
+  padding: 25px 15px;
+  border-bottom: 1px solid #e7e7e7;
+}
+.section_info table td {
+  font-size: 16px;
+  color: #afafaf;
+  font-family: "Avenir LT Std Roman";
+  padding: 25px 15px;
+  border-bottom: 1px solid #e7e7e7;
+}
+.section_info table tbody tr:hover {
+  background-color: #f2f2f2;
+}
+.section_info table tbody tr:hover td {
+  color: #111111;
+}
+footer {
+  margin-top: 50px;
 }
